--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.0.18",
+    "@reduxjs/toolkit": "^2.2.5",
     "@tailwindcss/forms": "^0.5.7",
     "@types/node": "20.5.7",
     "@vercel/postgres": "^0.5.0",
     "autoprefixer": "10.4.15",
+    "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
     "clsx": "^2.0.0",
     "formik": "^2.4.6",
@@ -21,6 +23,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^5.2.1",
+    "react-redux": "^9.1.2",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2",
     "zod": "^3.22.2"
